[package]
name = "enthalpy"
version = "0.1.0"
edition = "2024"

[features]
metal = ["candle-core/metal", "candle-nn/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]

[dependencies]
anyhow = "1.0.99"
tracing = "0.1.41"
candle-core = { version = "0.9.1",features = ["accelerate"] }
candle-nn = { version = "0.9.1" }
symphonia = { version = "0.5.4", features = ["all"] }
serde_json = "^1"
kaldi-fbank-rust-kautism = "0.1.0"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
voice_activity_detector = { version = "^0.2" }
cpal = { git = "https://github.com/rustdesk-org/cpal", branch = "osx-screencapturekit", features = [
    "screencapturekit",
] }
futures-util = "0.3.31"
serde = { version = "^1", features = ["derive"] }
reqwest = { version = "^0.12", features = ["json", "stream"] }
tokio = { version = "^1",features = ["rt-multi-thread","macros"] }
indicatif = "0.18.0"