[package]
name = "enthalpy"
version = "0.1.0"
edition = "2024"

[features]
metal = ["candle-core/metal", "candle-nn/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]

[profile.release]
opt-level = "z"
lto = "thin"
debug = false
panic = "abort"
strip = "symbols"
incremental = true
codegen-units = 1

[dependencies]
anyhow = "1.0.99"
tracing = "0.1.41"
candle-core = { version = "=0.9.2-alpha.1", features = ["accelerate"] }
candle-nn = { version = "=0.9.2-alpha.1" }
candle-transformers = { version = "=0.9.2-alpha.1" }
tokenizers = "0.21.4"
symphonia = { version = "0.5.4", features = ["all"] }
serde_json = "^1"
kaldi-fbank-rust-kautism = "0.1.0"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
voice_activity_detector = { version = "^0.2" }
cpal = { git = "https://github.com/rustdesk-org/cpal", branch = "osx-screencapturekit", features = [
    "screencapturekit",
] }
futures-util = "0.3.31"
serde = { version = "^1", features = ["derive"] }
reqwest = { version = "^0.12", features = ["json", "stream"] }
tokio = { version = "^1", features = ["rt-multi-thread", "macros"] }
indicatif = "0.18.0"
rand = "0.9.2"
clap = { version = "4.5.46", features = ["derive"] }
image = "^0.25"