[package]
name = "enthalpy"
version = "0.1.0"
edition = "2024"

[features]
metal = ["candle-core/metal", "candle-nn/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
audio = ["kaldi-fbank-rust-kautism", "voice_activity_detector", "cpal", "symphonia"]
sensevoicesmall = ["audio"]

[[bin]]
name = "sensevoicesmall"
required-features = ["sensevoicesmall"]

[profile.release]
opt-level = "z"
lto = "thin"
debug = false
panic = "abort"
strip = "symbols"
incremental = true
codegen-units = 1

[dependencies]
anyhow = "1.0.99"
tracing = "0.1.41"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
futures-util = "0.3.31"
rand = "0.10.0-rc.5"
tokio = { version = "^1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.5.46", features = ["derive"] }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
reqwest = { version = "^0.12", features = ["json", "stream"] }

candle-core = { version = "=0.9.2-alpha.1" }
candle-nn = { version = "=0.9.2-alpha.1" }
candle-transformers = { version = "=0.9.2-alpha.1" }
tokenizers = "0.22"
indicatif = "0.18.0"
image = "^0.25"

kaldi-fbank-rust-kautism = { version = "0.1.0", optional = true }
voice_activity_detector = { version = "^0.2", optional = true }
cpal = { git = "https://github.com/rustdesk-org/cpal", branch = "osx-screencapturekit", features = [
    "screencapturekit",
], optional = true }
symphonia = { version = "0.5.4", features = ["all"], optional = true }
